--- a/app.wxss
+++ b/app.wxss
@@ -1,10 +1,279 @@
 /**app.wxss**/
-.container {
+page {
   height: 100%;
+  font-size: 17px;
+  --mainColor: #ff78ae;
+  --bgColor:#f6f6f6;
+  --textFontSize:0.95em;
+}
+
+.container {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  background-color: var(--bgColor);
+}
+
+/* 背景 */
+.bg-white {
+  background-color: white;
+}
+
+/* 帖子框样式 */
+.post-box {
+  box-sizing: border-box;
+  width: 100%;
+  background-color: #fff;
+  padding: 20rpx 40rpx 40rpx 40rpx;
+  margin-bottom: 20rpx;
+}
+
+
+.detail-box {
+  /* 详情页面的白色框 */
+  margin-bottom: 30rpx;
+  box-sizing: border-box;
+  width: 100%;
+  background-color: #fff;
+  padding: 25rpx 35rpx;
+}
+
+.text-ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.box-btm-border {
+  border-bottom: 2px solid var(--bgColor);
+}
+/* flex样式 */
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+}
+
+.flex-col {
+  display: flex;
+  flex-direction: column;
+}
+
+.flex-col-center {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.flex-row-center {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.flex-row-SpcBwn {
+  display: flex;
+  flex-direction: row;
   justify-content: space-between;
-  padding: 200rpx 0;
-  box-sizing: border-box;
-} 
+  align-items: center;
+}
+
+.flex-row-item-center {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.flex-row-wrap {
+  display: flex;
+  flex-direction: row;
+  flex-wrap:wrap;
+}
+/* 字体样式 */
+
+.main-label-font {
+  color: var(--mainColor);
+  font-size: 0.8em;
+  font-weight: bolder;
+}
+.black-label-font {
+  color: #000;
+  font-size: 0.8em;
+  font-weight: bolder;
+}
+
+.main-normal-font {
+  color: var(--mainColor);
+  font-size: 0.8em;
+}
+.black-normal-font {
+  color: #000;
+  font-size: 0.8em;
+}
+.main-large-font {
+  color: var(--mainColor);
+  font-size: 1.1em;
+}
+.black-bigger-font {
+  color: #000;
+  font-size: 0.9em;
+}
+.text-font {
+  color: #000;
+  font-size: var(--textFontSize);
+}
+
+
+/* #空闲 #出租 #二手车 */
+.type-font {
+  color: var(--mainColor);
+  font-size: 0.6em;
+}
+
+.message-font {
+  color: #4C4C4C;
+  font-size: 0.78em;
+}
+
+.time-font {
+  color: #8d8d8d;
+  font-size: 0.6em;
+}
+
+.unselected-font {
+  color: #8d8d8d;
+  font-size: var(--textFontSize);
+}
+
+
+
+
+
+
+.lightGrayLabelFont {
+  color: #8d8d8d;
+  font-size: 0.75em;
+}
+
+.noteFont {
+  font-size: 0.85em;
+}
+
+
+.viewFont {
+  color: #8d8d8d;
+  font-size: 0.7em;
+}
+
+
+
+.mainColorFont {
+  color: #17b978;
+}
+
+.keyFont {
+  font-size: 0.9em;
+  color: #303030;
+}
+
+/* 图片样式 */
+
+.avater-image {
+  width: 50rpx;
+  height: 50rpx;
+  border-radius: 50%;
+  margin-right: 10rpx;
+}
+
+.gender-icon {
+  width: 25rpx;
+  height: 25rpx;
+}
+
+.car-image {
+  background-color: var(--bgColor);
+  height: 230rpx;
+  width: 345rpx;
+}
+
+/*框*/
+
+.text-area {
+  width: 580rpx;
+  font-size: var(--textFontSize);
+  color: #000;
+  margin-top: 10rpx;
+}
+
+.selected-box {
+  padding: 0 35rpx;
+  border: 1px solid var(--mainColor);
+  color: var(--mainColor);
+}
+.unselected-box {
+  padding: 0 35rpx;
+  border: 1px solid #000;
+  color: #000;
+}
+
+
+
+
+.noteText {
+  width: 560rpx;
+  height: 210rpx;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.copyTextBox {
+  /* 复制微信号框 */
+  border: 1px solid #17b978;
+  color: #17b978;
+  font-size: 0.75em;
+  padding: 0 32rpx;
+}
+
+.spaceNowrap {
+  white-space: nowrap;
+}
+
+.updateTime {
+  position: absolute;
+  right: 40rpx;
+  bottom: 10rpx;
+  color: #bdbdbd;
+  font-size: 0.6em;
+}
+
+.locationText {
+  color: #bdbdbd;
+  font-size: 0.6em;
+}
+
+/* 按钮 */
+
+.confirm-btn {
+  background-color: var(--mainColor);
+  width: 90%;
+  margin: 5% 5%;
+  color: #fff;
+  z-index: 2;
+}
+
+/* 发布 */
+
+.addIcon {
+  width: 110rpx;
+  height: 110rpx;
+  position: fixed;
+  bottom: 50rpx;
+  right: 30rpx;
+}
+
+.isAdding {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+}
