--- a/pages/rent/rent.wxml
+++ b/pages/rent/rent.wxml
@@ -1,2 +1,56 @@
-<!--pages/rent/rent.wxml-->
-<text>pages/rent/rent.wxml</text>
+<view class="container" style='min-height: 100%;;padding-bottom: 300rpx'>
+  <view class='flex-col-center fiter'>
+    <view style='margin-top:50rpx'> 为您在需要时提供第一手的校园电动车闲置资料,</view>
+    <view>不再怕耽误！</view>
+    <button type='default' style='margin:70rpx 0; width:350rpx' bindtap='filterClick'>筛选</button>
+  </view>
+
+
+  <view class='content' style='width:100%'>
+    <view class='bg-white pullDown'>
+      <view>附近</view>
+    </view>
+
+    <block wx:for="{{posts}}" wx:key="item">
+      <view class='post-box' data-postdetail='{{item}}' bindtap='postClick'>
+        <view class='flex-row-SpcBwn'>
+          <view class='flex-row-item-center'>
+            <image class='avater-image' src='{{item.avatarUrl}}'></image>
+            <view class='flex-col'>
+              <image wx:if="{{item.gender==0}}" class='gender-icon' src='{{manUrl}}'></image>
+              <image wx:else class='gender-icon' src='{{womanUrl}}'></image>
+              <view class='type-font'>#空闲</view>
+            </view>
+          </view>
+          <view class='flex-row-item-center'>
+            <image src='{{orientedUrl}}' style='width:25rpx;height:25rpx;margin-right:4rpx'></image>
+            <view class='main-normal-font'>{{item.area}}{{item.areaNum}}栋</view>
+          </view>
+        </view>
+
+        <view class='flex-row-SpcBwn' style='margin:15rpx 0 15rpx 60rpx'>
+          <image mode='aspectFit' class='car-image' src='{{item.carImage}}'></image>
+          <view class='flex-col' style='height:230rpx'>
+            <view wx:for='{{item.rentTime}}' wx:for-index="index" wx:if="{{index<4}}" class='black-label-font' style="margin-bottom:10rpx">
+              {{item.week}} {{item.beginTime}}-{{item.endTime}}
+            </view>
+            <view wx:if="{{item.rentTime.length>4}}">...</view>
+          </view>
+        </view>
+
+        <view class='flex-row-item-center' style='margin:0rpx 0 0rpx 60rpx; position:relative'>
+          <view style='margin-right:30rpx;' class='black-normal-font'>
+            <text wx:if='{{item.manned==0}}'>大车型</text>
+            <text wx:if='{{item.manned==1}}'>小车型</text>
+          </view>
+
+          <view class='text-ellipsis message-font' style='width:250rpx'>{{item.message}}</view>
+          <view class='time-font' style='position:absolute;right:0;bottom:0'>{{item.time}}更新</view>
+        </view>
+
+      </view>
+    </block>
+  </view>
+
+  <image class='addIcon' src='../../assert/icons/add.png' bindtap='addClick'></image>
+</view>
