--- a/pages/rent/rent.wxml
+++ b/pages/rent/rent.wxml
@@ -19,7 +19,7 @@
             <view class='flex-col'>
               <image wx:if="{{item.gender==0}}" class='gender-icon' src='{{manUrl}}'></image>
               <image wx:else class='gender-icon' src='{{womanUrl}}'></image>
-              <view class='type-font'>#空闲</view>
+              <view class='type-font'>#出租</view>
             </view>
           </view>
           <view class='flex-row-item-center'>
