--- a/pages/user/user.wxml
+++ b/pages/user/user.wxml
@@ -13,9 +13,13 @@
   </form>
 </view>
 
-<view>
+<view bindtap='changeHust'>
+
   <image src='{{hustImage}}'></image>
 </view>
+<button type='primary'  bindtap='addWanted'>发布租车</button>
  <button type='primary'  bindtap='getPublishListClick'>租车贴列表</button>
 
- <button type='primary' bindtap="getUsedListClick">出租贴列表</button>
+ <button type='primary' bindtap="addUsedCarPic">发布二手车</button>
+ <button type='primary' bindtap="getUsedListClick">二手车列表</button>
+ 
