dev1 used not finished

--- a/pages/me/me.wxml
+++ b/pages/me/me.wxml
@@ -31,16 +31,15 @@
 
 
   </view>
-
-  <view class='itemBox'>
-    <view style='labelFont' bindtap='myRentClick'>我的出租</view>
-    <image src='{{nextUrl}}' class='nextIcon'></image>
-  </view>
-  <view class='itemBox'>
+  <view class='itemBox' bindtap='myWantedClick'>
     <view style='labelFont'>我的租车</view>
     <image src='{{nextUrl}}' class='nextIcon'></image>
   </view>
-  <view class='itemBox'>
+  <view class='itemBox' bindtap='myRentClick'>
+    <view style='labelFont'>我的出租</view>
+    <image src='{{nextUrl}}' class='nextIcon'></image>
+  </view>
+  <view class='itemBox' bindtap='myUsedClick'>
     <view style='labelFont'>我的二手车</view>
     <image src='{{nextUrl}}' class='nextIcon'></image>
   </view>
