--- a/pages/user/user.wxml
+++ b/pages/user/user.wxml
@@ -21,10 +21,21 @@
 <view>
   <form bindsubmit='addRent'>
     <input name="message" placeholder="备注"/>
+    <input name="money" placeholder="金额"/>
     <input name="manned" placeholder="能否载人"/><!-- 下拉框 -->
     <input name="rent" placeholder="出租信息是否展示"/><!-- 下拉框 -->
     <image src='{{carImage}}' bindtap='changeCar'></image><!-- 选择车辆图片 -->
     <!-- rentTime -->
-    <button type='primary' form-type='submit'>提交</button>
+    <button type='primary' form-type='submit'>出租信息添加</button>
+  </form>
+</view>
+
+<!-- 求租信息添加 -->
+<view>
+  <form bindsubmit='addPublish'>
+    <input name="message" placeholder="发布信息"/>
+    <input name="money" placeholder="金额"/>
+    <input name="status" placeholder="发布状态 status"/>
+    <button type='primary' form-type='submit'>发布信息添加</button>
   </form>
 </view>
